--- a/hello-node-app/package.json
+++ b/hello-node-app/package.json
@@ -16,7 +16,7 @@
     "docker",
     "dockerfile"
   ],
-  "author": "miiro@getintodevops.com",
+  "author": "ggriffin924@gmail.com",
   "license": "ISC",
   "devDependencies": { "test": ">=0.6.0" }
 }
