--- a/hello-node-app/package.json
+++ b/hello-node-app/package.json
@@ -18,5 +18,8 @@
   ],
   "author": "ggriffin924@gmail.com",
   "license": "ISC",
-  "devDependencies": { "test": ">=0.6.0" }
+  "devDependencies": {
+     "@godaddy/terminus": ">=2.1.0"
+     "test": ">=0.6.0"
+  }
 }
