--- a/hello-node-app/package.json
+++ b/hello-node-app/package.json
@@ -19,7 +19,7 @@
   "author": "ggriffin924@gmail.com",
   "license": "ISC",
   "devDependencies": {
-     "@godaddy/terminus": ">=2.1.0"
+     "@godaddy/terminus": ">=2.1.0",
      "test": ">=0.6.0"
   }
 }
